# kytchen

./: LICENSE  README.md  pyproject.toml
cookbook/: __init__.py  ingredient.py  mealplan.py  recipe.py
doc/: ingredients.csv  kytchen  kytchen-tutorial.ipynb
kytchen/: __init__.py  app.py  cookbook.py  ingredient.py  mealplan.py  recipe.py  views.py
src/kytchen/: __init__.py  ingredient.py  mealplan.py  recipe.py
