[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kytchen"
dynamic = ["version"]
authors = [
  { name="Samuel González-Castillo" },
]
description = "Handle your recipes and organise your meal plans"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
	"Topic :: Utilities",
	"Development Status :: 3 - Alpha",
]
keywords = ["cooking", "recipes"]

dependencies = ["PyQt6>=6.6.0,<7.0.0"]

[tool.hatch.build.targets.sdist]
include = [
	"kytchen/*.py",
]

[project.urls]
Homepage = "https://sgc.ink/work/"
Repository = "https://github.com/gonzalezcastillo/kytchen"

[tool.hatch.version]
path = "kytchen/__init__.py"

[project.gui-scripts]
kytchen = "kytchen.app:main"
